[gd_scene load_steps=2 format=3 uid="uid://dwvf8ui6jkjt5"]

[ext_resource type="Script" path="res://Scripts/Hud.gd" id="1_ghwy0"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ghwy0")

[node name="Message" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_bottom = 88.0
grow_horizontal = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 64
text = "0"

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -48.0
offset_right = 79.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 1.55

[node name="CloudTimer" type="Timer" parent="."]
wait_time = 2.5

[connection signal="button_down" from="StartButton" to="." method="_on_start_button_button_down"]
[connection signal="timeout" from="CloudTimer" to="." method="_on_cloud_timer_timeout"]
